--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,50 @@ body,td,th {
 	padding: 0;
 	border: 0;
 }
+.button {
+	text-align: center;
+	text-transform: uppercase;
+	cursor: pointer;
+	font-size: 16px;
+	letter-spacing: 4px;
+	position: relative;
+	background-color: #16a085;
+	border: none;
+	color: #fff;
+	padding: 10px;
+	width: 200px;
+	text-align: center;
+	transition-duration: 0.4s;
+	overflow: hidden;
+	box-shadow: 0 5px 15px #193047;
+	border-radius: 4px;
+}  
+.button:hover {
+	background: #fff;
+	box-shadow: 0px 2px 10px 5px #1abc9c;
+	color: #000;
+}  
+.button:after {
+	content: "";
+	background: #1abc9c;
+	display: block;
+	position: absolute;
+	padding-top: 300%;
+	padding-left: 350%;
+	margin-left: -20px !important;
+	margin-top: -120%;
+	opacity: 0;
+	transition: all 0.8s
+}
+.button:active:after {
+	padding: 0;
+	margin: 0;
+	opacity: 1;
+	transition: 0s
+}  
+.button:focus {
+	outline:0;
+}
 #container {
 	width: 960px;
 	margin-right: auto;
@@ -35,7 +79,7 @@ a img {
 h3  {
 	color: #0000ff;
 	font-family: Verdana, Geneva, sans-serif;
-	font-size: large;
+	font-size: x-large;
 	padding-top: 10px;	
 }
 h5	{
