--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,7 +53,7 @@ body,td,th {
 	outline:0;
 }
 #container {
-	width: 960px;
+	width: 720px;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -62,6 +62,7 @@ h1 {
 	margin: 0px;
 	background-color: #574C38;
 	padding-left: 5px;
+	border-radius: 4px;
 }
 li {
    list-style-type: none;
