--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,4 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 body,td,th {
 	background-color: #ffffff;
 	color: #574C38;
@@ -87,5 +87,5 @@ h3  {
 	padding-top: 10px;	
 }
 h5	{
-	padding-top: 110px;
+	padding-top: 20px;
 }
